Fixing scrollbar styling for the profile info management dialog. Fixes still need to be done in the future.

--- a/src/Styles/Navbar/ProfilePictureManagerDialog.scss
+++ b/src/Styles/Navbar/ProfilePictureManagerDialog.scss
@@ -12,6 +12,20 @@
 
   }
 
+  .ProfileInfoManagementDialog::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+    background-color: #094561 !important;
+  }
+;
+
+  .ProfileInfoManagementDialog::-webkit-scrollbar {
+    background-color: #094561 !important;
+  }
+
+  .ProfileInfoManagementDialog::-webkit-scrollbar-thumb {
+    background-color: #000000 !important;
+  }
+
   .UploadButton,
   .DeleteButton,
   .Cancel {
